--- a/BookMoney.csproj
+++ b/BookMoney.csproj
@@ -14,4 +14,10 @@
 	  <Content Include="src\input.css" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.9" />
+	  <PackageReference Include="NLog" Version="6.0.5" />
+	  <PackageReference Include="NLog.Web.AspNetCore" Version="6.0.5" />
+	</ItemGroup>
+
 </Project>
