--- a/BookMoney.csproj
+++ b/BookMoney.csproj
@@ -7,6 +7,13 @@
 		<UserSecretsId>805a5b97-2c61-4b9f-9fa2-8ed49912471f</UserSecretsId>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Compile Remove="ModelsTemp\**" />
+	  <Content Remove="ModelsTemp\**" />
+	  <EmbeddedResource Remove="ModelsTemp\**" />
+	  <None Remove="ModelsTemp\**" />
+	</ItemGroup>
+
 	<!--<Target Name="NpmInstall" BeforeTargets="Build">
 		<Exec Command="npm install" />
 	</Target>-->
@@ -16,6 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="CSharpFunctionalExtensions" Version="3.6.0" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
 	    <PrivateAssets>all</PrivateAssets>
@@ -29,10 +37,6 @@
 	  <PackageReference Include="NLog" Version="6.0.5" />
 	  <PackageReference Include="NLog.Web.AspNetCore" Version="6.0.5" />
 	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="ModelsTemp\" />
 	</ItemGroup>
 
 </Project>
